astbuilder v4 (full syntax support) + add tests