@@ -1,7 +1,6 @@
 package io.github.snaill.ast;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Scope extends AbstractNode {
     public Scope(List<Statement> children) {
@@ -9,6 +8,6 @@ public class Scope extends AbstractNode {
     }
 
     public List<Statement> getStatements() {
-        return super.getChildren().stream().map(Statement.class::cast).collect(Collectors.toList());
+        return super.getChildren().stream().map(Statement.class::cast).toList();
     }
 }
